# Knife-Hit

./: .gitignore  CMakeLists.txt  Knife-Hit.sln  Knife-Hit.vcxproj  Knife-Hit.vcxproj.filters
include/: CollisionDetector.hpp  FontManager.hpp  Game.hpp  GameConstants.hpp  Knife.hpp  Renderer.hpp  Target.hpp
src/: CollisionDetector.cpp  FontManager.cpp  Game.cpp  GameConstants.cpp  Knife.cpp  Renderer.cpp  Target.cpp  main.cpp
